Adding action price and delivery status
At the discounted price, you cannot see the old price

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -150,3 +150,14 @@ span.collapsing{
     display: flex;
     justify-content: space-between;
 }
+
+.discount, .original {
+    color: red;
+}
+
+.discount span , .original span {
+    font-weight: bold;
+}
+
+
+
